# shopman-omniman

./: README.md  conftest.py  omniman_test_settings.py  omniman_test_urls.py  pyproject.toml
shopman/omniman/: __init__.py  admin.py  admin_widgets.py  apps.py  conf.py  context_processors.py  dispatch.py  exceptions.py  holds.py  ids.py  protocols.py  registry.py  signals.py  unfold.py
shopman/omniman/api/: polling.py  serializers.py  urls.py  views.py
shopman/omniman/contrib/refs/: __init__.py  apps.py  exceptions.py  models.py  registry.py  sequences.py  services.py  types.py
shopman/omniman/contrib/refs/migrations/: 0001_initial.py
shopman/omniman/contrib/refs/tests/: test_refs.py
shopman/omniman/contrib/stock/: resolvers.py
shopman/omniman/management/commands/: cleanup_idempotency_keys.py  process_directives.py
shopman/omniman/migrations/: 0001_initial.py
shopman/omniman/models/: __init__.py  channel.py  directive.py  fulfillment.py  idempotency.py  order.py  session.py
shopman/omniman/services/: __init__.py  commit.py  modify.py  resolve.py  write.py
shopman/omniman/templates/omniman/admin/: directive_before.html  session_change_form.html
shopman/omniman/tests/: test_api_polling.py  test_api_sessions.py  test_channel_policies.py  test_commit_branches.py  test_context_processors.py  test_dispatch.py  test_e2e_flow.py  test_exceptions.py  test_management_commands.py  test_models.py  test_modify_service.py  test_order_lifecycle.py  test_preorder.py  test_registry.py  test_resolve_service.py  test_services.py  test_services_validators.py
