[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shopman-omniman"
version = "0.1.0"
description = "Shopman Omniman — Omnichannel Order Kernel"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
    "shopman-utils>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
]

[tool.setuptools.packages.find]
include = ["shopman.omniman*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "omniman_test_settings"
pythonpath = ["."]
